5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1671_1872.log
== TEST (2019-04-22 14:30:02) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
X = float(input(" Digite o valor de  X: "))
Y = float(input(" Digite o valor de Y: "))
if(x==0 and y==0):
	print(" Origem ")
elif(y==0):
	print(" Eixo X ")
elif(x==0):
	print(" Eixo Y ")
elif(x>0 and y>0):
	print(" Q1 ")
elif(x<0 and y>0):
	print(" Q2 ")
elif(x<0 and y<0):
	print(" Q3 ")
elif(x>0 and y<0):
	print(" Q4 ")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(x==0 and y==0):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:30:04) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
X = float(input(" Digite o valor de  X: "))
Y = float(input(" Digite o valor de Y: "))
if(x==0 and y==0):
	print(" Origem ")
elif(y==0):
	print(" Eixo X ")
elif(x==0):
	print(" Eixo Y ")
elif(x>0 and y>0):
	print(" Q1 ")
elif(x<0 and y>0):
	print(" Q2 ")
elif(x<0 and y<0):
	print(" Q3 ")
elif(x>0 and y<0):
	print(" Q4 ")

-- EXECUTION TIME:
0.135098
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1872/main.py", line 4, in <module>
    if(x==0 and y==0):
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:31:16) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
X = float(input(" Digite o valor de  X: "))
Y = float(input(" Digite o valor de Y: "))
if(x==0 and y==0):
	print(" Origem ")
elif(y==0):
	print(" Eixo X ")
elif(x==0):
	print(" Eixo Y ")
elif(x>0 and y>0):
	print(" Q1 ")
elif(x<0 and y>0):
	print(" Q2 ")
elif(x<0 and y<0):
	print(" Q3 ")
elif(x>0 and y<0):
	print(" Q4 ")

-- EXECUTION TIME:
0.130026
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1872/main.py", line 4, in <module>
    if(x==0 and y==0):
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:31:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
X = float(input(" Digite o valor de  X: "))
Y = float(input(" Digite o valor de Y: "))
if(x==0 and y==0):
	print("Origem")
elif(y==0):
	print("Eixo X")
elif(x==0):
	print("Eixo Y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")

-- EXECUTION TIME:
0.129503
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1872/main.py", line 4, in <module>
    if(x==0 and y==0):
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:32:21) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
X = float(input(" Digite o valor de  X: "))
Y = float(input(" Digite o valor de Y: "))
if(x==0 and y==0):
	print("Origem")
elif(y==0):
	print("Eixo X")
elif(x==0):
	print("Eixo Y")
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(x==0 and y==0):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:33:15) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
X = float(input(" Digite o valor de  X: "))
Y = float(input(" Digite o valor de Y: "))
if(X==0 and Y==0):
	print("Origem")
elif(Y==0):
	print("Eixo X")
elif(X==0):
	print("Eixo Y")
elif(X>0 and Y>0):
	print("Q1")
elif(X<0 and Y>0):
	print("Q2")
elif(X<0 and Y<0):
	print("Q3")
elif(X>0 and Y<0):
	print("Q4")

-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:33:17) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
X = float(input(" Digite o valor de  X: "))
Y = float(input(" Digite o valor de Y: "))
if(X==0 and Y==0):
	print("Origem")
elif(Y==0):
	print("Eixo X")
elif(X==0):
	print("Eixo Y")
elif(X>0 and Y>0):
	print("Q1")
elif(X<0 and Y>0):
	print("Q2")
elif(X<0 and Y<0):
	print("Q3")
elif(X>0 and Y<0):
	print("Q4")

-- EXECUTION TIME:
0.166801
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
